@@ -1,6 +1,6 @@
 ;;;; Guile Debugger
 
-;;; Copyright (C) 1999 Free Software Foundation, Inc.
+;;; Copyright (C) 1999, 2001 Free Software Foundation, Inc.
 ;;;
 ;;; This program is free software; you can redistribute it and/or
 ;;; modify it under the terms of the GNU General Public License as
